--- a/sorter.html
+++ b/sorter.html
@@ -342,12 +342,12 @@
     <section class="booksSect">
       <table class="booksTable">
         <tr class="booksRow">
-          <td class="book Science" onclick="window.location.href='QS.html';">
+          <td onclick="window.location.href='QS.html';">
             <div class="card">
-              <span class="genre">
+              <span class="genre Non-Fiction">
                 Non-Fiction
               </span>
-              <span class="topic">
+              <span class="topic Science">
                 Science
               </span>
               <br>
@@ -361,7 +361,7 @@
                   </b>
                 </span>
                 <br>
-                <span class="auther">
+                <span class="auther Michio">
                   By: Michio Kaku
                 </span>
                 <br>
@@ -374,12 +374,12 @@
               </button>
             </div>
           </td>
-          <td class="book Science" onclick="window.location.href='OOT.html';">
+          <td onclick="window.location.href='OOT.html';">
             <div class="card">
-              <span class="genre">
+              <span class="genre Non-Fiction">
                 Non-Fiction
               </span>
-              <span class="topic">
+              <span class="topic Science">
                 Science
               </span>
               <br>
@@ -395,7 +395,7 @@
                   </b>
                 </span>
                 <br>
-                <span class="auther">
+                <span class="auther Stephen">
                   By: Stephen Hawking
                 </span>
                 <br>
@@ -408,12 +408,12 @@
               </button>
             </div>
           </td>
-          <td class="book Science" onclick="window.location.href='O.html';">
+          <td onclick="window.location.href='O.html';">
             <div class="card">
-              <span class="genre">
+              <span class="genre Non-Fiction">
                 Non-Fiction
               </span>
-              <span class="topic">
+              <span class="topic Science">
                 Science
               </span>
               <br>
@@ -429,7 +429,7 @@
                   </b>
                 </span>
                 <br>
-                <span class="auther">
+                <span class="auther Neil">
                   By: Neil DeGrasse Tyson
                 </span>
                 <br>
@@ -444,12 +444,12 @@
           </td>
         </tr>
         <tr class="booksRow">
-          <td class="book Science" onclick="window.location.href='APH.html';">
+          <td onclick="window.location.href='APH.html';">
             <div class="card">
-              <span class="genre">
+              <span class="genre Non-Fiction">
                 Non-Fiction
               </span>
-              <span class="topic">
+              <span class="topic Science">
                 Science
               </span>
               <br>
@@ -465,7 +465,7 @@
                   </b>
                 </span>
                 <br>
-                <span class="auther">
+                <span class="auther Neil">
                   By: Neil DeGrasse Tyson
                 </span>
                 <br>
@@ -480,10 +480,10 @@
           </td>
           <td class="book Space" onclick="window.location.href='AGL.html';">
             <div class="card">
-              <span class="genre">
+              <span class="genre Non-Fiction">
                 Non-Fiction
               </span>
-              <span class="topic">
+              <span class="topic Space">
                 Space
               </span>
               <br>
@@ -499,7 +499,7 @@
                   </b>
                 </span>
                 <br>
-                <span class="auther">
+                <span class="auther Chris">
                   By: Chris Hadfield
                 </span>
                 <br>
@@ -512,12 +512,12 @@
               </button>
             </div>
           </td>
-          <td class="book Science" onclick="window.location.href='TGD.html';">
+          <td onclick="window.location.href='TGD.html';">
             <div class="card">
-              <span class="genre">
+              <span class="genre Non-Fiction">
                 Non-Fiction
               </span>
-              <span class="topic">
+              <span class="topic Science">
                 Science
               </span>
               <br>
@@ -533,7 +533,7 @@
                   </b>
                 </span>
                 <br>
-                <span class="auther">
+                <span class="auther Stephen">
                   By: Stephen Hawking
                 </span>
                 <br>
@@ -551,12 +551,12 @@
           </td>
         </tr>
         <tr class="booksRow">
-          <td class="book Science" onclick="window.location.href='LFA.html';">
+          <td onclick="window.location.href='LFA.html';">
             <div class="card">
-              <span class="genre">
+              <span class="genre Non-Fiction">
                 Non-Fiction
               </span>
-              <span class="topic">
+              <span class="topic Science">
                 Science
               </span>
               <br>
@@ -572,7 +572,7 @@
                   </b>
                 </span>
                 <br>
-                <span class="auther">
+                <span class="auther Neil">
                   By: Neil DeGrasse Tyson
                 </span>
                 <br>
@@ -585,12 +585,12 @@
               </button>
             </div>
           </td>
-          <td class="book Science" onclick="window.location.href='BABQ.html';">
+          <td onclick="window.location.href='BABQ.html';">
             <div class="card">
-              <span class="genre">
+              <span class="genre Non-Fiction">
                 Non-Fiction
               </span>
-              <span class="topic">
+              <span class="topic Science">
                 Science
               </span>
               <br>
@@ -606,7 +606,7 @@
                   </b>
                 </span>
                 <br>
-                <span class="auther">
+                <span class="auther Non-Fiction">
                   By: Stephen Hawking
                 </span>
                 <br>
@@ -624,10 +624,10 @@
           </td>
           <td class="book Computer-Science" onclick="window.location.href='TCL.html';">
             <div class="card">
-              <span class="genre">
+              <span class="genre Non-Fiction">
                 Non-Fiction
               </span>
-              <span class="topic">
+              <span class="topic CompSci">
                 Computer Science
               </span>
               <br>
@@ -643,7 +643,7 @@
                   </b>
                 </span>
                 <br>
-                <span class="auther">
+                <span class="auther Brian_Ritchie">
                   By: Brian W. Kernighan & Dennis M. Ritchie
                 </span>
                 <br>
@@ -660,10 +660,10 @@
         <tr class="booksRow">
           <td class="book Uncertainty" onclick="window.location.href='TBP.html';">
             <div class="card">
-              <span class="genre">
+              <span class="genre Fiction">
                 Fiction
               </span>
-              <span class="topic">
+              <span class="topic Uncertainty">
                 Uncertainty
               </span>
               <br>
@@ -679,7 +679,7 @@
                   </b>
                 </span>
                 <br>
-                <span class="auther">
+                <span class="auther Cixin">
                   By: Cixin Liu
                 </span>
                 <br>
@@ -694,10 +694,10 @@
           </td>
           <td class="book Uncertainty" onclick="window.location.href='SE.html';">
             <div class="card">
-              <span class="genre">
+              <span class="genre Fiction">
                 Fiction
               </span>
-              <span class="topic">
+              <span class="topic Uncertainty">
                 Uncertainty
               </span>
               <br>
@@ -713,7 +713,7 @@
                   </b>
                 </span>
                 <br>
-                <span class="auther">
+                <span class="auther Cixin">
                   By: Cixin Liu
                 </span>
                 <br>
@@ -728,10 +728,10 @@
           </td>
           <td class="book Uncertainty" onclick="window.location.href='BL.html';">
             <div class="card">
-              <span class="genre">
+              <span class="genre Fiction">
                 Fiction
               </span>
-              <span class="topic">
+              <span class="topic Uncertainty">
                 Uncertainty
               </span>
               <br>
@@ -747,7 +747,7 @@
                   </b>
                 </span>
                 <br>
-                <span class="auther">
+                <span class="auther Cixin">
                   By: Cixin Liu
                 </span>
                 <br>
@@ -764,10 +764,10 @@
         <tr class="booksRow">
           <td class="book ShortStories" onclick="window.location.href='HUTS.html';">
             <div class="card">
-              <span class="genre">
+              <span class="genre Fiction">
                 Fiction
               </span>
-              <span class="topic">
+              <span class="topic Short">
                 Short Stories
               </span>
               <br>
@@ -783,7 +783,7 @@
                   </b>
                 </span>
                 <br>
-                <span class="auther">
+                <span class="auther Cixin">
                   By: Cixin Liu
                 </span>
                 <br>
@@ -798,10 +798,10 @@
           </td>
           <td class="book ShortStories" onclick="window.location.href='TWE.html';">
             <div class="card">
-              <span class="genre">
+              <span class="genre Fiction">
                 Fiction
               </span>
-              <span class="topic">
+              <span class="topic Short">
                 Short Stories
               </span>
               <br>
@@ -817,7 +817,7 @@
                   </b>
                 </span>
                 <br>
-                <span class="auther">
+                <span class="auther Cixin">
                   By: Cixin Liu
                 </span>
                 <br>
@@ -832,10 +832,10 @@
           </td>
           <td class="book Uncertainty" onclick="window.location.href='ROT.html';">
             <div class="card">
-              <span class="genre">
+              <span class="genre Fiction">
                 Fiction
               </span>
-              <span class="topic">
+              <span class="topic Uncertainty">
                 Uncertainty
               </span>
               <br>
@@ -851,7 +851,7 @@
                   </b>
                 </span>
                 <br>
-                <span class="auther">
+                <span class="auther Baoshu">
                   By: Baoshu
                 </span>
                 <br>
@@ -868,10 +868,10 @@
         <tr class="booksRow">
           <td class="book Space" onclick="window.location.href='BHS.html';">
             <div class="card">
-              <span class="genre">
+              <span class="genre Fiction">
                 Fiction
               </span>
-              <span class="topic">
+              <span class="topic Space">
                 Space
               </span>
               <br>
@@ -888,7 +888,7 @@
                   </b>
                 </span>
                 <br>
-                <span class="auther">
+                <span class="auther Gregory_Larry">
                   By: Gregory Benford & Larry Niven
                 </span>
                 <br>
@@ -906,10 +906,10 @@
           </td>
           <td class="book Space" onclick="window.location.href='G.html';">
             <div class="card">
-              <span class="genre">
+              <span class="genre Fiction">
                 Fiction
               </span>
-              <span class="topic">
+              <span class="topic Space">
                 Space
               </span>
               <br>
@@ -925,7 +925,7 @@
                   </b>
                 </span>
                 <br>
-                <span class="auther">
+                <span class="auther Gregory_Larry">
                   By: Gregory Benford & Larry Niven
                 </span>
                 <br>
