--- a/sorter.html
+++ b/sorter.html
@@ -196,7 +196,7 @@
               Filters
             </b>
           </legend>
-          <input type="checkbox" id="Non-Fiction" name="Catagory1" value="Non-Fiction" class="in" checked>
+          <input type="checkbox" id="Non-Fiction" name="Catagory1" value="Non-Fiction" class="in" onclick="filterFict('Fiction')">
           <label for="Non-Fiction">
             Non-Fiction
           </label>
