--- a/TGD.html
+++ b/TGD.html
@@ -224,7 +224,18 @@
                     Stephen Hawking & Leonard Mlodinow
                 </h3>
                 <hr>
-                <p id="bookDescription"></p>
+                <p id="bookDescription">
+                  When and how did the universe begin? Why are we here? What is the nature of reality? Is the apparent “grand design” of our universe evidence 
+                  of a benevolent creator who set things in motion—or does science offer another explanation? In this startling and lavishly illustrated book, 
+                  Stephen Hawking and Leonard Mlodinow present the most recent scientific thinking about these and other abiding mysteries of the universe, 
+                  in nontechnical language marked by brilliance and simplicity.
+
+                  According to quantum theory, the cosmos does not have just a single existence or history. The authors explain that we ourselves 
+                  are the product of quantum fluctuations in the early universe, and show how quantum theory predicts the “multiverse”—the idea that 
+                  ours is just one of many universes that appeared spontaneously out of nothing, each with different laws of nature. They conclude with a riveting 
+                  assessment of M-theory, an explanation of the laws governing our universe that is currently the only viable candidate for a 
+                  “theory of everything”: the unified theory that Einstein was looking for, which, if confirmed, would represent the ultimate triumph of human reason.
+                </p>
                 <div id="payDeliver">
                     <button class="checkOutBtn" onclick="localStorage.setItem('The Grand Design', '1');alert('added to your cart');">
                         <b>
