--- a/M.html
+++ b/M.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            To Hold Up The Sky
+            Molecules: The Elements and the Architecture of Everything
         </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,16 +39,16 @@
         <br>
         <div class="row">
           <div class="column">
-            <img src="resources/book13(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            <img src="resources/book20(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
           </div>
           <div class="column">
-            <img src="resources/book13(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            <img src="resources/book20(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
           </div>
           <div class="column">
-            <img src="resources/book13(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            <img src="resources/book20(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
           </div>
           <div class="column">
-            <img src="resources/book13(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            <img src="resources/book20(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
           </div>
         </div>
         
@@ -60,17 +60,30 @@
             <fieldset class="desc">
               <div>
                 <h2 id="bookTitle">
-                    To Hold Up The Sky
+                    Molecules: The Elements and the Architecture of Everything
                     <br>
                     $20.00
                 </h2>
                 <h3 id="bookAuther">
-                    Cixin Liu
+                    Theodore Gray
                 </h3>
                 <hr>
-                <p id="bookDescription"></p>
+                <p id="bookDescription">
+                    Theodore Gray begins with an explanation of how atoms bond to form molecules and compounds, as well as the difference between organic and inorganic chemistry. 
+                    He then goes on to explore the vast array of materials molecules can create, including: soaps and solvents; goops and oils; rocks and ores; ropes and 
+                    fibers; painkillers and dangerous drugs; sweeteners; perfumes and stink bombs; colors and pigments; and controversial compounds including asbestos, 
+                    CFCs, and thimerosal.
+                    <br>
+                    <br>
+                    Big, gorgeous photographs, as well as diagrams of the compounds and their chemical bonds, rendered with never before seen beauty, 
+                    fill the pages and capture molecules in their various states.
+                    <br>
+                    <br>
+                    As he did in The Elements, Gray shows us molecules as we've never seen them before. It's the perfect book for his loyal fans who've been eager 
+                    for more and for anyone fascinated with the mysteries of the material world.
+                </p>
                 <div id="payDeliver">
-                    <button class="checkOutBtn" onclick="localStorage.setItem('To Hold Up The Sky', '1');alert('added to your cart');">
+                    <button class="checkOutBtn" onclick="localStorage.setItem('Molecules: The Elements and the Architecture of Everything', '1');alert('added to your cart');">
                         <b>
                           Add To Cart
                         </b>
