--- a/TSSOS.html
+++ b/TSSOS.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            To Hold Up The Sky
+            To Sleep in a Sea Of Stars
         </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,16 +39,16 @@
         <br>
         <div class="row">
           <div class="column">
-            <img src="resources/book13(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            <img src="resources/book21(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
           </div>
           <div class="column">
-            <img src="resources/book13(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            <img src="resources/book21(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
           </div>
           <div class="column">
-            <img src="resources/book13(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            <img src="resources/book21(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
           </div>
           <div class="column">
-            <img src="resources/book13(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            <img src="resources/book21(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
           </div>
         </div>
         
@@ -60,17 +60,38 @@
             <fieldset class="desc">
               <div>
                 <h2 id="bookTitle">
-                    To Hold Up The Sky
+                    To Sleep in a Sea Of Stars
                     <br>
-                    $20.00
+                    $15.00
                 </h2>
                 <h3 id="bookAuther">
-                    Cixin Liu
+                    Christopher Paolini
                 </h3>
                 <hr>
-                <p id="bookDescription"></p>
+                <p id="bookDescription">
+                    <b>
+                        Kira Navárez dreamed of life on new worlds.
+                    </b>
+                    <br>
+                    <br>
+                    <b>
+                        Now she's awakened a nightmare.
+                    </b>
+                    <br>
+                    <br>
+                    During a routine survey mission on an uncolonized planet, Kira finds an alien relic. At first she's delighted, but elation 
+                    turns to terror when the ancient dust around her begins to move.
+                    <br>
+                    <br>
+                    As war erupts among the stars, Kira is launched into a galaxy-spanning odyssey of discovery and transformation. 
+                    First contact isn't at all what she imagined, and events push her to the very limits of what it means to be human.
+                    <br>
+                    <br>
+                    While Kira faces her own horrors, Earth and its colonies stand upon the brink of annihilation. Now, Kira might be humanity's 
+                    greatest and final hope . . .
+                </p>
                 <div id="payDeliver">
-                    <button class="checkOutBtn" onclick="localStorage.setItem('To Hold Up The Sky', '1');alert('added to your cart');">
+                    <button class="checkOutBtn" onclick="localStorage.setItem('To Sleep in a Sea Of Stars', '1');alert('added to your cart');">
                         <b>
                           Add To Cart
                         </b>
