--- a/TAM.html
+++ b/TAM.html
@@ -62,7 +62,7 @@
             <fieldset class="desc">
               <div>
                 <h2 id="bookTitle">
-                    The Apolo Murders
+                    The Apollo Murders
                     <br>
                     $25.00
                 </h2>
