--- a/sorter.html
+++ b/sorter.html
@@ -93,6 +93,11 @@
                 Computer Science
               </label>
               <br>
+              <input type="radio" id="chem" name="Topics" value="chem" class="in">
+              <label for="chem">
+                Chemistry
+              </label>
+              <br>
               <input type="radio" id="Uncertainty" name="Topics" value="Uncertainty" class="in">
               <label for="Uncertainty">
                 Uncertainty
@@ -199,12 +204,12 @@
     <section class="booksSect">
       <table class="booksTable">
         <tr class="booksRow">
-          <td onclick="window.location.href='QS.html';">
+          <td class="book" onclick="window.location.href='QS.html';">
             <div class="card">
-              <span class="genre Non-Fiction">
+              <span class="genre">
                 Non-Fiction
               </span>
-              <span class="topic Science">
+              <span class="topic">
                 Science
               </span>
               <br>
@@ -231,12 +236,12 @@
               </button>
             </div>
           </td>
-          <td onclick="window.location.href='OOT.html';">
+          <td class="book" onclick="window.location.href='OOT.html';">
             <div class="card">
-              <span class="genre Non-Fiction">
+              <span class="genre">
                 Non-Fiction
               </span>
-              <span class="topic Science">
+              <span class="topic">
                 Science
               </span>
               <br>
@@ -265,12 +270,12 @@
               </button>
             </div>
           </td>
-          <td onclick="window.location.href='O.html';">
+          <td class="book" onclick="window.location.href='O.html';">
             <div class="card">
-              <span class="genre Non-Fiction">
+              <span class="genre">
                 Non-Fiction
               </span>
-              <span class="topic Science">
+              <span class="topic">
                 Science
               </span>
               <br>
@@ -301,12 +306,12 @@
           </td>
         </tr>
         <tr class="booksRow">
-          <td onclick="window.location.href='APH.html';">
+          <td class="book" onclick="window.location.href='APH.html';">
             <div class="card">
-              <span class="genre Non-Fiction">
+              <span class="genre">
                 Non-Fiction
               </span>
-              <span class="topic Science">
+              <span class="topic">
                 Science
               </span>
               <br>
@@ -335,9 +340,9 @@
               </button>
             </div>
           </td>
-          <td class="book Space" onclick="window.location.href='AGL.html';">
+          <td class="book" onclick="window.location.href='AGL.html';">
             <div class="card">
-              <span class="genre Non-Fiction">
+              <span class="genre">
                 Non-Fiction
               </span>
               <span class="topic Space">
@@ -369,12 +374,12 @@
               </button>
             </div>
           </td>
-          <td onclick="window.location.href='TGD.html';">
+          <td class="book" onclick="window.location.href='TGD.html';">
             <div class="card">
-              <span class="genre Non-Fiction">
+              <span class="genre">
                 Non-Fiction
               </span>
-              <span class="topic Science">
+              <span class="topic">
                 Science
               </span>
               <br>
@@ -408,12 +413,12 @@
           </td>
         </tr>
         <tr class="booksRow">
-          <td onclick="window.location.href='LFA.html';">
+          <td class="book" onclick="window.location.href='LFA.html';">
             <div class="card">
-              <span class="genre Non-Fiction">
+              <span class="genre">
                 Non-Fiction
               </span>
-              <span class="topic Science">
+              <span class="topic">
                 Science
               </span>
               <br>
@@ -442,12 +447,12 @@
               </button>
             </div>
           </td>
-          <td onclick="window.location.href='BABQ.html';">
+          <td class="book" onclick="window.location.href='BABQ.html';">
             <div class="card">
-              <span class="genre Non-Fiction">
+              <span class="genre">
                 Non-Fiction
               </span>
-              <span class="topic Science">
+              <span class="topic">
                 Science
               </span>
               <br>
@@ -479,9 +484,9 @@
               </button>
             </div>
           </td>
-          <td class="book Computer-Science" onclick="window.location.href='TCL.html';">
+          <td class="book" onclick="window.location.href='TCL.html';">
             <div class="card">
-              <span class="genre Non-Fiction">
+              <span class="genre">
                 Non-Fiction
               </span>
               <span class="topic CompSci">
@@ -515,7 +520,112 @@
           </td>
         </tr>
         <tr class="booksRow">
-          <td class="book Uncertainty" onclick="window.location.href='TBP.html';">
+          <td class="book" onclick="window.location.href='YAH.html';">
+            <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic">
+                Science
+              </span>
+              <br>
+              <br>
+              <img src="resources/book18(1).jpg"  style="max-width: 70%; max-height: auto;">
+              <br>
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      You Are Here: Around the World in 92 Minutes 
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Chris Hadfield
+                </span>
+                <br>
+                <span class="cost">
+                  $25.00
+                </span>
+              </span>
+              <button onclick="localStorage.setItem('You Are Here: Around the World in 92 Minutes', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
+          </td>
+          <td class="book" onclick="window.location.href='M.html';">
+            <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic">
+                Chemistry
+              </span>
+              <br>
+              <br>
+              <img src="resources/book20(1).jpg" style="max-width: 70%; max-height: auto;">
+              <br>
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      Molecules: The Elements and the Architecture of Everything
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Theodore Gray
+                </span>
+                <br>
+                <span class="cost">
+                  $20.00
+                </span>
+              </span>
+              <button onclick="localStorage.setItem('Molecules: The Elements and the Architecture of Everything', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
+          </td>
+          <td class="book" onclick="window.location.href='TAM.html';">
+            <div class="card">
+              <span class="genre">
+                Fiction
+              </span>
+              <span class="topic">
+                Space
+              </span>
+              <br>
+              <br>
+              <img src="resources/book19(1).jpg" style="max-width: 70%; max-height: auto;">
+              <br>
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      The Apollo Murders
+                    </a>
+                  </b>
+                </span>
+                <hr>
+                <br>
+                <span class="auther">
+                  By: Chris Hadfield
+                </span>
+                <br>
+                <span class="cost">
+                  $25.00
+                </span>
+              </span>
+              <button onclick="localStorage.setItem('The Apollo Murders', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
+          </td>
+        </tr>
+        <tr class="booksRow">
+          <td class="book" onclick="window.location.href='TBP.html';">
             <div class="card">
               <span class="genre Fiction">
                 Fiction
@@ -549,7 +659,7 @@
               </button>
             </div>
           </td>
-          <td class="book Uncertainty" onclick="window.location.href='SE.html';">
+          <td class="book" onclick="window.location.href='SE.html';">
             <div class="card">
               <span class="genre Fiction">
                 Fiction
@@ -583,7 +693,7 @@
               </button>
             </div>
           </td>
-          <td class="book Uncertainty" onclick="window.location.href='BL.html';">
+          <td class="book" onclick="window.location.href='BL.html';">
             <div class="card">
               <span class="genre Fiction">
                 Fiction
@@ -619,7 +729,7 @@
           </td>
         </tr>
         <tr class="booksRow">
-          <td class="book ShortStories" onclick="window.location.href='HUTS.html';">
+          <td class="book" onclick="window.location.href='HUTS.html';">
             <div class="card">
               <span class="genre Fiction">
                 Fiction
@@ -653,7 +763,7 @@
               </button>
             </div>
           </td>
-          <td class="book ShortStories" onclick="window.location.href='TWE.html';">
+          <td class="book" onclick="window.location.href='TWE.html';">
             <div class="card">
               <span class="genre Fiction">
                 Fiction
@@ -687,7 +797,7 @@
               </button>
             </div>
           </td>
-          <td class="book Uncertainty" onclick="window.location.href='ROT.html';">
+          <td class="book" onclick="window.location.href='ROT.html';">
             <div class="card">
               <span class="genre Fiction">
                 Fiction
@@ -723,7 +833,7 @@
           </td>
         </tr>
         <tr class="booksRow">
-          <td class="book Space" onclick="window.location.href='BHS.html';">
+          <td class="book" onclick="window.location.href='BHS.html';">
             <div class="card">
               <span class="genre Fiction">
                 Fiction
@@ -761,7 +871,7 @@
               </button>
             </div>
           </td>
-          <td class="book Space" onclick="window.location.href='G.html';">
+          <td class="book" onclick="window.location.href='G.html';">
             <div class="card">
               <span class="genre Fiction">
                 Fiction
