--- a/sorter.html
+++ b/sorter.html
@@ -214,7 +214,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book1(1).jpg" style="max-width: 70%; max-height: 50%;">
+              <img src="resources/book1(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -345,7 +345,7 @@
               <span class="genre">
                 Non-Fiction
               </span>
-              <span class="topic Space">
+              <span class="topic">
                 Space
               </span>
               <br>
@@ -608,7 +608,7 @@
                     </a>
                   </b>
                 </span>
-                <hr>
+                <br>
                 <span class="auther">
                   By: Chris Hadfield
                 </span>
@@ -626,7 +626,7 @@
         <tr class="booksRow">
           <td class="book" onclick="window.location.href='TBP.html';">
             <div class="card">
-              <span class="genre Fiction">
+              <span class="genre">
                 Fiction
               </span>
               <span class="topic Uncertainty">
@@ -634,7 +634,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book10(1).jpg" style="max-width: 70%; max-height: 50%;">
+              <img src="resources/book10(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -660,7 +660,7 @@
           </td>
           <td class="book" onclick="window.location.href='SE.html';">
             <div class="card">
-              <span class="genre Fiction">
+              <span class="genre">
                 Fiction
               </span>
               <span class="topic Uncertainty">
@@ -668,7 +668,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book11(1).jpg" style="max-width: 70%; max-height: 50%;">
+              <img src="resources/book11(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -694,7 +694,7 @@
           </td>
           <td class="book" onclick="window.location.href='BL.html';">
             <div class="card">
-              <span class="genre Fiction">
+              <span class="genre">
                 Fiction
               </span>
               <span class="topic Uncertainty">
@@ -702,7 +702,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book12(1).jpg" style="max-width: 70%; max-height: 50%;">
+              <img src="resources/book12(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -730,7 +730,7 @@
         <tr class="booksRow">
           <td class="book" onclick="window.location.href='HUTS.html';">
             <div class="card">
-              <span class="genre Fiction">
+              <span class="genre">
                 Fiction
               </span>
               <span class="topic Short">
@@ -738,7 +738,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book13(1).jpg" style="max-width: 70%; max-height: 50%;">
+              <img src="resources/book13(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -764,7 +764,7 @@
           </td>
           <td class="book" onclick="window.location.href='TWE.html';">
             <div class="card">
-              <span class="genre Fiction">
+              <span class="genre">
                 Fiction
               </span>
               <span class="topic Short">
@@ -772,7 +772,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book14(1).jpg" style="max-width: 70%; max-height: 50%;">
+              <img src="resources/book14(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -798,7 +798,7 @@
           </td>
           <td class="book" onclick="window.location.href='ROT.html';">
             <div class="card">
-              <span class="genre Fiction">
+              <span class="genre">
                 Fiction
               </span>
               <span class="topic Uncertainty">
@@ -806,7 +806,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book15(1).jpg" style="max-width: 70%; max-height: 50%;">
+              <img src="resources/book15(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -834,16 +834,16 @@
         <tr class="booksRow">
           <td class="book" onclick="window.location.href='BHS.html';">
             <div class="card">
-              <span class="genre Fiction">
+              <span class="genre">
                 Fiction
               </span>
-              <span class="topic Space">
+              <span class="topic">
                 Space
               </span>
               <br>
               <br>
               <br>
-              <img src="resources/book16(1).jpg" style="max-width: 70%; max-height: 50%;">
+              <img src="resources/book16(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -872,15 +872,15 @@
           </td>
           <td class="book" onclick="window.location.href='G.html';">
             <div class="card">
-              <span class="genre Fiction">
+              <span class="genre">
                 Fiction
               </span>
-              <span class="topic Space">
+              <span class="topic">
                 Space
               </span>
               <br>
               <br>
-              <img src="resources/book17(1).jpg" style="max-width: 70%; max-height: 50%;">
+              <img src="resources/book17(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -903,7 +903,40 @@
                 Add to Cart
               </button>
             </div>
-            
+          </td>
+          <td class="book" onclick="window.location.href='TSSOS.html';">
+            <div class="card">
+              <span class="genre">
+                Fiction
+              </span>
+              <span class="topic">
+                Space
+              </span>
+              <br>
+              <br>
+              <img src="resources/book21(1).jpg" style="max-width: 70%; max-height: auto;">
+              <br>
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      To Sleep in a Sea Of Stars
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Christopher Paolini
+                </span>
+                <br>
+                <span class="cost">
+                  $15.00
+                </span>
+              </span>
+              <button onclick="localStorage.setItem('To Sleep in a Sea Of Stars', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
           </td>
         </tr>
       </table>
