--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
         New:
       </span>
     </h2>
+    <span class="ribbon" style="right:-40px;top:-40px;">
+      New
+    </span>
     <table>
       <tr>
         <th onclick="window.location.href='HUTS.html';">
