--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         New:
       </span>
     </h2>
-    <span class="ribbon" style="right:-40px;top:-40px;">
+    <span class="ribbon" style="left:13%;top:53%;">
       New
     </span>
     <table>
