--- a/TAM.html
+++ b/TAM.html
@@ -39,16 +39,16 @@
         <br>
         <div class="row">
           <div class="column">
-            <img src="resources/book19(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            <img src="resources/book19(1).jpg" width="auto" height="100px" onclick="inlarge(this);">
           </div>
           <div class="column">
-            <img src="resources/book19(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            <img src="resources/book19(2).jpg" width="auto" height="100px" onclick="inlarge(this);">
           </div>
           <div class="column">
-            <img src="resources/book19(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            <img src="resources/book19(3).jpg" width="auto" height="100px" onclick="inlarge(this);">
           </div>
           <div class="column">
-            <img src="resources/book19(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            <img src="resources/book19(4).jpg" width="auto" height="100px" onclick="inlarge(this);">
           </div>
         </div>
         
@@ -56,7 +56,7 @@
           <span onclick="this.parentElement.style.display='none'" class="closebtn">
             &times;
         </span>
-          <img id="expandedImg" style="width:auto;height:0.1%;">
+          <img id="expandedImg" style="width:auto;height:700px;">
           <div id="imgtext"></div>
         </div>
             <fieldset class="desc">
