--- a/Cart.html
+++ b/Cart.html
@@ -40,7 +40,7 @@
       <div class="cart">
         <div class="cart-header">
           <h3>Your Cart</h3>
-          <p class="noOfItems">0 items</p>
+          <p class="numOfItems"></p>
         </div>
         <hr noshade="true" size="1px" />
         <div class="cart-items">
