--- a/Cart.html
+++ b/Cart.html
@@ -51,7 +51,7 @@
         <hr noshade="true" size="1px" />
         <div class="cart-footer cart-header">
           <h4>Total</h4>
-          <p class="total">$0</p>
+          <p id="totalCost"></p>
         </div>
         <button class="buy-btn checkOutBtn">Check out</button>
       </div>
