--- a/QS.html
+++ b/QS.html
@@ -68,7 +68,21 @@
                     Michio Kaku
                 </h3>
                 <hr>
-                <p id="bookDescription"></p>
+                <p id="bookDescription">
+                  The runaway success of the microchip may finally be reaching its end. As shrinking transistors approach the size of atoms, 
+                  the phenomenal growth of computational power inevitably collapses. But this change heralds the birth of a revolutionary new type of computer, one 
+                  that calculates on atoms themselves.
+                  <br>
+                  <br>
+                  Quantum computers promise unprecedented gains in computing power, enabling advancements that could overturn every aspect of our daily lives. 
+                  While the media has mainly focused on their startling potential to crack any known encryption method, the race is already on to exploit their 
+                  incredible power to revolutionize industry. Automotive makers, medical researchers, and consulting firms are all betting on quantum computing to 
+                  design more efficient vehicles, create life-saving new drugs, and streamline businesses. But this is only the beginning. Quantum computing could be 
+                  used to decode the complex chemical processes needed to produce cheap fertilizers and unleash a second Green Revolution; create a super battery that 
+                  will enable the Solar Age; or design nuclear fusion reactors to generate clean, safe, renewable energy. It may even unravel the fiendishly 
+                  difficult protein folding that lies at the heart of as-yet-incurable diseases like Alzheimer`s, ALS, and Parkinson`s. Already, quantum computers 
+                  are being put to work to help solve the greatest mystery in science—the origin of the universe.
+                </p>
                 <div id="payDeliver">
                     <button class="checkOutBtn" onclick="localStorage.setItem('Quantum Supremacy', '1');alert('added to your cart');">
                         <b>
