--- a/OOT.html
+++ b/OOT.html
@@ -68,7 +68,20 @@
                     Thomas Hertog
                 </h3>
                 <hr>
-                <p id="bookDescription"></p>
+                <p id="bookDescription">
+                  Perhaps the biggest question Stephen Hawking tried to answer in his extraordinary life was how the universe could have created conditions so 
+                  perfectly hospitable to life. In order to solve this mystery, Hawking studied the big bang origin of the universe, but his early work ran into a 
+                  crisis when the math predicted many big bangs producing a multiverse—countless different universes, most of which would be far too bizarre to 
+                  harbor life.
+                  <br>
+                  <br>
+                  Holed up in the theoretical physics department at Cambridge, Stephen Hawking and his friend and collaborator Thomas Hertog worked on this problem 
+                  for twenty years, developing a new theory of the cosmos that could account for the emergence of life. Peering into the extreme quantum physics of 
+                  cosmic holograms and venturing far back in time to our deepest roots, they were startled to find a deeper level of evolution in which the physical 
+                  laws themselves transform and simplify until particles, forces, and even time itself fades away. This discovery led them to a revolutionary 
+                  idea: The laws of physics are not set in stone but are born and co-evolve as the universe they govern takes shape. As Hawking`s final days drew near, 
+                  the two collaborators published their theory, which proposed a radical new Darwinian perspective on the origins of our universe.
+                </p>
                 <div id="payDeliver">
                     <button class="checkOutBtn" onclick="localStorage.setItem('On The Origin Of Time', '1');alert('added to your cart')">
                         <b>
