--- a/contacts.html
+++ b/contacts.html
@@ -38,7 +38,7 @@
         </nav>
         <section>
           <p>
-            Have any questions? Just phone use with 
+            Have any questions or concerns? Just phone use with 
             <b>
               (312) 555-7084, 
             </b>
