--- a/contacts.html
+++ b/contacts.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="script.js" defer></script>
         <style>
-          input[type=text], select, textarea {
+          input[type=text], input[type=email], select, textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -65,12 +65,16 @@
             .
           </p>
         </section>
-        <div class="form-popup" id="form">
-          <label for="fname">Full name</label>
-          <input type="text" id="fname" name="fullname" placeholder="Your full name...">
-          <label for="email">Email</label>
+        <div class="form-popup" id="form" aria-required="true">
+          <label for="fname">
+            Full name
+          </label>
+          <input type="text" id="fname" name="fullname" placeholder="Your full name..." required aria-required="true">
+          <label for="email">
+            Email
+          </label>
           <input type="email" id="emain" name="email" placeholder="Your email...">
-          <textarea id="subject" name="subject" placeholder="Write your questions or concerns here..."></textarea>
+          <textarea id="subject" name="subject" placeholder="Write your questions or concerns here..." required aria-required="true"></textarea>
           <button type="submit" class="btn">
             Submit
           </button>
