--- a/contacts.html
+++ b/contacts.html
@@ -78,7 +78,7 @@
           <button type="submit" class="btn">
             Submit
           </button>
-          <button class="cancel" onclick="closeForm()">
+          <button class="btn cancel" onclick="closeForm()">
             Close
           </button>
         </div>
