--- a/contacts.html
+++ b/contacts.html
@@ -66,21 +66,24 @@
           </p>
         </section>
         <div class="form-popup" id="form" aria-required="true">
-          <label for="fname">
-            Full name
-          </label>
-          <input type="text" id="fname" name="fullname" placeholder="Your full name..." required aria-required="true">
-          <label for="email">
-            Email
-          </label>
-          <input type="email" id="emain" name="email" placeholder="Your email...">
-          <textarea id="subject" name="subject" placeholder="Write your questions or concerns here..." required aria-required="true"></textarea>
-          <button type="submit" class="btn">
-            Submit
-          </button>
-          <button class="btn cancel" onclick="closeForm()">
-            Close
-          </button>
+          <div class="form-container">
+            <label for="fname">
+              Full name
+            </label>
+            <input type="text" id="fname" name="fullname" placeholder="Your full name..." required aria-required="true">
+            <label for="email">
+              Email
+            </label>
+            <input type="email" id="emain" name="email" placeholder="Your email...">
+            <textarea id="subject" name="subject" placeholder="Write your questions or concerns here..." required aria-required="true"></textarea>
+            <button type="submit" class="btn">
+              Submit
+            </button>
+            <button class="btn cancel" onclick="closeForm()">
+              Close
+            </button>
+          </div>
+          
         </div>
         <br>
         <hr>
