--- a/contacts.html
+++ b/contacts.html
@@ -56,7 +56,9 @@
             </b>
             or you can Email us with 
             <b>
-              scibook@gmail.com, 
+              <a href="mailto: someone@gmail.com">
+                scibooks@gmail.com
+              </a>
             </b>
             or complete our form 
             <a onclick="openForm()">
