--- a/contacts.html
+++ b/contacts.html
@@ -61,7 +61,7 @@
               </a>
             </b>
             or complete our form 
-            <a onclick="openForm()">
+            <a onclick="openForm()" style="cursor:pointer;">
               here
             </a>
             .
