--- a/contacts.html
+++ b/contacts.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="script.js" defer></script>
         <style>
           input[type=text], input[type=email], select, textarea {
@@ -52,10 +53,12 @@
           <p>
             Have any questions or concerns? Just phone use with 
             <b>
+              <i class="glyphicon glyphicon-phone"></i>
               (312) 555-7084, 
             </b>
             or you can Email us with 
             <b>
+              <i class="glyphicon glyphicon-envelope"></i>
               <a href="mailto: someone@gmail.com">
                 scibooks@gmail.com
               </a>
