--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
     <span class="ribbon" style="left:13%;top:53%;">
       New
     </span>
+    <span class="ribbon" style="left:20%;top:53%;">
+      New
+    </span>
     <table>
       <tr>
         <th onclick="window.location.href='HUTS.html';">
@@ -138,9 +141,19 @@
             </p>
           </div>
         </th>
-        <th onclick="">
+        <th onclick="window.location.href='TAM.html';">
           <div class="card">
-            
+            <img src="resources/book19(1).jpg" width="40%" height="auto">
+            <hr>
+            <p>
+              <span style="font-size:20px;">
+                $25.00
+              </span>
+              <br>
+              <span style="font-size:15px;">
+                The Apollo Murders
+              </span>
+            </p>
           </div>
         </th>
         <th onclick="">
