--- a/Cart.html
+++ b/Cart.html
@@ -40,21 +40,26 @@
     <div class="body">
       <div class="cart">
         <div class="cart-header">
-          <h3>Your Cart</h3>
+          <h3>
+            Your Cart
+          </h3>
           <p id="numOfItems"></p>
         </div>
-        <hr noshade="true" size="1px" />
+        <hr noshade="true" size="1px">
         <div class="cart-items">
           <ul class="cart-itemsList">
-            
           </ul>
         </div>
-        <hr noshade="true" size="1px" />
+        <hr noshade="true" size="1px">
         <div class="cart-footer cart-header">
-          <h4>Total</h4>
+          <h4>
+            Total
+          </h4>
           <p id="totalCost"></p>
         </div>
-        <button class="buy-btn checkOutBtn">Check out</button>
+        <button class="buy-btn checkOutBtn">
+          Check out
+        </button>
       </div>
     </div>
           
