--- a/Cart.html
+++ b/Cart.html
@@ -43,6 +43,9 @@
           <h3>
             Your Cart
           </h3>
+          <button class="clearCartBtn" onclick="clearCart()">
+            Clear Cart
+          </button>
           <p id="numOfItems"></p>
         </div>
         <hr noshade="true" size="1px">
