--- a/questions.html
+++ b/questions.html
@@ -69,6 +69,14 @@
           hello world
         </p>
       </div>
+      <button class="collapsible">
+        What Payment options do we accept?
+      </button>
+      <div class="content">
+        <p>
+          hello world
+        </p>
+      </div>
     </section>
     <script>
       var coll = document.getElementsByClassName("collapsible");
