--- a/Cart.html
+++ b/Cart.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="cartStyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <script src="script.js"></script>
@@ -65,7 +66,83 @@
         </button>
       </div>
     </div>
-          
+    <div class="paymentForm-popup">
+      <div class="paymentForm-container">
+        <div class="credit">
+          <div class="row">
+            <div class="col-75">
+              <form>
+                <div class="row">
+                  <div class="col-50">
+                    <h3>
+                      Billing Address
+                    </h3>
+                    <label for="fname">
+                      <i class="fa fa-user"></i> 
+                      Full Name
+                    </label>
+                    <input type="text" id="fname" name="firstname" placeholder="Someone">
+                    <label for="email">
+                      <i class="fa fa-envelope"></i> 
+                      Email
+                    </label>
+                    <input type="text" id="email" name="email" placeholder="someone@gmail.com">
+                    <label for="adr">
+                      <i class="fa fa-address-card-o"></i> 
+                      Address
+                    </label>
+                    <input type="text" id="adr" name="address" placeholder="542 W. 15th Street">
+                    <label for="city">
+                      <i class="fa fa-institution"></i> 
+                      City
+                    </label>
+                    <input type="text" id="city" name="city" placeholder="Edmonton">
+                  <div class="col-50">
+                    <h3>
+                      Payment
+                    </h3>
+                    <label for="fname">
+                      Accepted Cards
+                    </label>
+                    <div class="icon-container">
+                      <i class="fa fa-cc-visa" style="color:navy;"></i>
+                      <i class="fa fa-cc-amex" style="color:blue;"></i>
+                      <i class="fa fa-cc-mastercard" style="color:red;"></i>
+                      <i class="fa fa-cc-discover" style="color:orange;"></i>
+                    </div>
+                    <label for="cname">
+                      Name on Card
+                    </label>
+                    <input type="text" id="cname" name="cardname" placeholder="John More Doe">
+                    <label for="ccnum">
+                      Credit card number
+                    </label>
+                    <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
+                    <label for="expmonth">
+                      Exp Month
+                    </label>
+                    <input type="text" id="expmonth" name="expmonth" placeholder="September">
+                    <div class="row">
+                      <div class="col-50">
+                        <label for="expyear">
+                          Exp Year
+                        </label>
+                        <input type="text" id="expyear" name="expyear" placeholder="2030">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <label>
+                  <input type="checkbox" checked="checked" name="sameadr"> 
+                  Shipping address same as billing
+                </label>
+                <input type="submit" value="Continue to checkout" class="btn">
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="cart.js"></script>
     <fieldset style="float:right;">
       <h2 id="totals">
