--- a/Cart.html
+++ b/Cart.html
@@ -81,12 +81,12 @@
                       <i class="fa fa-user"></i> 
                       Full Name
                     </label>
-                    <input type="text" id="fname" name="firstname" placeholder="Someone">
+                    <input type="text" id="fname" name="firstname" placeholder="Sacabambaspis">
                     <label for="email">
                       <i class="fa fa-envelope"></i> 
                       Email
                     </label>
-                    <input type="text" id="email" name="email" placeholder="someone@gmail.com">
+                    <input type="text" id="email" name="email" placeholder="Sacabambaspis@gmail.com">
                     <label for="adr">
                       <i class="fa fa-address-card-o"></i> 
                       Address
@@ -113,7 +113,7 @@
                     <label for="cname">
                       Name on Card
                     </label>
-                    <input type="text" id="cname" name="cardname" placeholder="John More Doe">
+                    <input type="text" id="cname" name="cardname" placeholder="Mr. Sacabambaspis">
                     <label for="ccnum">
                       Credit card number
                     </label>
