--- a/Cart.html
+++ b/Cart.html
@@ -66,7 +66,7 @@
         </button>
       </div>
     </div>
-    <div class="paymentForm-popup">
+    <div class="paymentForm">
       <div class="paymentForm-container">
         <div class="PaymentOpts">
 
