--- a/Cart.html
+++ b/Cart.html
@@ -72,7 +72,11 @@
 
         </div>
         <div class="credit">
+          <div class="row">
+            <div class="col-75">
               <form>
+                <div class="row">
+                  <div class="col-50">
                     <h3>
                       Billing Address
                     </h3>
@@ -129,12 +133,16 @@
                         <input type="text" id="expyear" name="expyear" placeholder="2030">
                       </div>
                     </div>
+                  </div>
+                </div>
                 <label>
                   <input type="checkbox" checked="checked" name="sameadr"> 
                   Shipping address same as billing
                 </label>
                 <input type="submit" value="Continue to checkout" class="btn">
               </form>
+            </div>
+          </div>
         </div>
       </div>
     </div>
