--- a/Cart.html
+++ b/Cart.html
@@ -66,11 +66,8 @@
         </button>
       </div>
     </div>
-    <div class="paymentForm">
+    <div class="paymentForm-popup">
       <div class="paymentForm-container">
-        <div class="PaymentOpts">
-
-        </div>
         <div class="credit">
           <div class="row">
             <div class="col-75">
