--- a/PaymentOpts.html
+++ b/PaymentOpts.html
@@ -1,23 +1,120 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            SciBooks Payment options
-        </title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
-        <script src="https://js.stripe.com/v3/"></script>
-        <script src="script.js" defer></script>
-        <script src="client.js" defer></script>
-    </head>
-    <body>
-        <fieldset>
-            <div id="payment-request-button" style="padding-left:48%;padding-top: 49%;">
+
+<head>
+    <title>
+        SciBooks Payment options
+    </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="cartStyle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+    <script src="https://js.stripe.com/v3/"></script>
+    <script src="script.js" defer></script>
+    <script src="client.js" defer></script>
+</head>
+
+<body>
+    <header>
+        <div class="headTitle">
+          <p>
+            <b>
+              <span style="color:blue;">
+                Sci
+              </span>
+              <span style="color:green;">
+                Books
+              </span>
+            </b>
+          </p>
+        </div>
+      </header>
+      <nav class="stick">
+        <div class="menu fa fa-home" onclick="window.location.href='index.html';">
+          Home
+        </div>
+        <div class="menu fa fa-search" onclick="window.location.href='sorter.html';">
+          Lookup
+        </div>
+        <div class="menu fa fa-shopping-cart" onclick="window.location.href='Cart.html';">
+          Cart
+        </div>
+      </nav>
+    <div class="credit">
+        <div class="row">
+            <div class="col-75">
+                <form>
+                    <div class="row">
+                        <div class="col-50">
+                            <h3>
+                                Billing Address
+                            </h3>
+                            <label for="fname">
+                                <i class="fa fa-user"></i>
+                                Full Name
+                            </label>
+                            <input type="text" id="fname" name="firstname" placeholder="Sacabambaspis">
+                            <label for="email">
+                                <i class="fa fa-envelope"></i>
+                                Email
+                            </label>
+                            <input type="text" id="email" name="email" placeholder="Sacabambaspis@gmail.com">
+                            <label for="adr">
+                                <i class="fa fa-address-card-o"></i>
+                                Address
+                            </label>
+                            <input type="text" id="adr" name="address" placeholder="542 W. 15th Street">
+                            <label for="city">
+                                <i class="fa fa-institution"></i>
+                                City
+                            </label>
+                            <input type="text" id="city" name="city" placeholder="Edmonton">
+                            <div class="col-50">
+                                <h3>
+                                    Payment
+                                </h3>
+                                <label for="fname">
+                                    Accepted Cards
+                                </label>
+                                <div class="icon-container">
+                                    <i class="fa fa-cc-visa" style="color:navy;"></i>
+                                    <i class="fa fa-cc-amex" style="color:blue;"></i>
+                                    <i class="fa fa-cc-mastercard" style="color:red;"></i>
+                                    <i class="fa fa-cc-discover" style="color:orange;"></i>
+                                </div>
+                                <label for="cname">
+                                    Name on Card
+                                </label>
+                                <input type="text" id="cname" name="cardname" placeholder="Mr. Sacabambaspis">
+                                <label for="ccnum">
+                                    Credit card number
+                                </label>
+                                <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
+                                <label for="expmonth">
+                                    Exp Month
+                                </label>
+                                <input type="text" id="expmonth" name="expmonth" placeholder="September">
+                                <div class="row">
+                                    <div class="col-50">
+                                        <label for="expyear">
+                                            Exp Year
+                                        </label>
+                                        <input type="text" id="expyear" name="expyear" placeholder="2030">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <label>
+                            <input type="checkbox" checked="checked" name="sameadr">
+                            Shipping address same as billing
+                        </label>
+                        <input type="submit" value="Continue to checkout" class="btn">
+                </form>
             </div>
-            <button onclick="window.location.href='Cart.html';" id="cancelBtn">
-                Cancel
-            </button>
-        </fieldset>
-    </body>
+        </div>
+    </div>
+</body>
+
 </html>
