--- a/sorter.html
+++ b/sorter.html
@@ -369,7 +369,7 @@
                   $10.00
                 </span>
               </span>
-              <button onclick="localStorage.setItem('An Astronauts Guide to Life', 1);alert('Added to your cart');">
+              <button onclick="localStorage.setItem(`An Astronaut's Guide to Life`, 1);alert('Added to your cart');">
                 Add to Cart
               </button>
             </div>
